<resources>


    <string name="app_name">Tabela Campeonato</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ponto_ideal">Ponto Ideal Soluções</string>
    <string name="naoliberar">Não\nLiberar</string>
    <string name="liberar">Liberar\nAcesso</string>
    <string name="rbsim">Sim</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="como_gostaria_de_ser_chamado">Como gostaria de ser chamado?</string>
    <string name="e_mail">e-mail</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="nick">Nick</string>
    <string name="_0_15">0/15</string>
    <string name="selecione_avatar_ou_imagem_da_galeria">Selecione Avatar ou Imagem da Galeria</string>
    <string name="apelido">Apelido</string>
    <string name="deslogar">Deslogar</string>
    <string name="sair">Sair</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="liga">Liga</string>
    <string name="escudoliga">Escudo da Liga</string>
    <string name="EnviarConvite">Enviar Convite</string>
    <string name="Buscar">Buscar</string>
    <string name="emailjog">Digite o e-mail cadastrado do Jogador</string>
    <string name="jogador">Jogador</string>
    <string name="enviado">Enviado por:</string>
    <string name="status">Status</string>
    <string name="data">Data</string>
    <string name="aceitar">Aceitar</string>
    <string name="recusar">Recusar</string>
    <string name="texto_convite">Estamos convidando você para participar de Campeonatos junto com nossos times.</string>
    <string name="texto_fecha">Seu convite para o jogador foi</string>
    <string name="responder">Responder</string>
    <string name="convite_da_liga">Convite da Liga:</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="limpar">limpar</string>
    <string name="selecionar_permissoes">Selecione Permissões do Jogador</string>
    <string name="acompanhar_campeonatos">Acompanhar Campeonatos</string>
    <string name="inserir_alterar_resultados">Inserir/Alterar Resultados</string>
    <string name="iniciar_encerrar_campeonatos">Iniciar/Encerrar Campeonatos</string>
    <string name="convidar_incluir_jogadores">Incluir/Excluir Jogadores na Liga</string>
    <string name="rbnao">Não</string>
    <string name="pref_key">TabCamp</string>
    <string name="ligaatual">LIGAATUAL</string>
    <string name="carregando">Carregando ...</string>
    <string name="entrar_como_visitante">Entrar como Visitante</string>
    <string name="cadastrar_por_e_mail">Cadastrar por e-mail</string>
    <string name="versenha">"Visualizar "</string>
    <string name="logar">Logar</string>
    <string name="permissoes">Permissões: </string>

    <string name="convite_recebido">Convite Recebido</string>
    <string name="convite_enviado">Convite Enviado</string>
    <string name="enviado_para">Enviado para:</string>
    <string name="carregando_liga">Carregando Liga</string>
    <string name="jogadores">Jogadores da Liga</string>
    <string name="campeonatos">Campeonatos</string>
    <string name="jogos">Jogos</string>
    <string name="selecione_op_o">Selecione opção</string>
    <string name="ok">Ok</string>
    <string name="resposta">Resposta</string>
    <string name="clique_em_ok_para_finalizar">Clique em OK para finalizar</string>
    <string name="voltar">Voltar</string>
    <string name="repetir_senha">Repetir senha</string>
    <string name="senha_min_8_caracteres_letras_e_numeros">Senha (min. 8 caracteres, letras e numeros)</string>
    <string name="nome_ou_nick">Nome ou Nick</string>
    <string name="contar_letras">Contar letras</string>
    <string name="contar_60">0/60</string>
    <string name="contar_30">0/30</string>
    <string name="primeiro">1º -</string>
    <string name="segundo">2º -</string>
    <string name="terceiro">3º -</string>
    <string name="numero_de_t_tulos">Numero de Títulos</string>
    <string name="_0">0</string>
    <string name="ranking">Ranking:</string>
    <string name="info_nliga">Info\nLiga</string>
    <string name="t_tulos">Títulos:</string>
    <string name="novo_ncampeonato">Novo\nCampeonato</string>
    <string name="estatistica">Estatísticas</string>
    <string name="todos_jogadores">Todos Jogadores</string>
    <string name="jogadores_ativos">Jogadores Ativos</string>
    <string name="gerenciar_permiss_es">Gerenciar Permissões</string>
    <string name="bloquear_jogador">Bloquear Jogador</string>
    <string name="liberar_jogador">Desbloquear</string>
    <string name="permiss_o_atual">Permissão Atual: </string>
    <string name="criar_jogador">Criar Jogador</string>
    <string name="editar_jogador">Editar Jogador</string>

    <string name="selecione_tipo_de_campeonato">Selecione tipo de Campeonato</string>
    <string name="selecione_n_mero_de_participantes">Selecione número de participantes:</string>

    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="jogadores_inscritos">Jogadores\nInscritos</string>
    <string name="selecione_jogadores">Selecione Jogadores</string>
    <string name="avan_ar">Avançar</string>
    <string name="nºparticipantes">Nº de Participantes:</string>
    <string name="tipo">Tipo:</string>
    <string name="sortear_partidas_iniciais">Partidas Iniciais</string>
    <string name="sorteando_partidas">Sorteando Partidas...</string>
    <string name="x">X</string>

    <string name="sortear">Sortear</string>
    <string name="manual">Manual</string>
    <string name="jogador_alterar">Selecione Jogador para alterar</string>
    <string name="jogador_destino">Selecione Destino</string>
    <string name="finalista">Finalista</string>
    <string name="trof_u">Troféu</string>
    <string name="classifica_o_geral">Classificação Geral</string>
    <string name="pr_ximo_jogo">Próximo Jogo:</string>
    <string name="a_definir">A definir</string>

    <string name="pt">PT</string>
    <string name="sg">SG</string>
    <string name="gp">GP</string>
    <string name="gols_contra">GC</string>
    <string name="j">J</string>
    <string name="v">V</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="mp">MP</string>
    <string name="_1">1</string>
    <string name="realizado">Realizado</string>
    <string name="em_aberto">Em Aberto</string>
    <string name="nome">Nome</string>
    <string name="logar_com_email">Logar com email</string>
    <string name="logar_com_google">Logar com Conta do Google</string>
    <string name="fazer_cadastro">Fazer Cadastro</string>
    <string name="obrigado_tab_camp">Obrigado por utilizar o Tabela Campeonato</string>
    <string name="preesione_novamente">Pressione novamente para sair.</string>
    <string name="usuario_invalido">Usuario ou Senha Invalido</string>
    <string name="informe_email">Informe email para Logim</string>
    <string name="informe_senha">Informe senha para Logim</string>
    <string name="informe_email_senha">Informe email para recuperação de senha</string>
    <string name="emai_nao_encontrado">email não encontrado.</string>
    <string name="cadastro_email">Cadastro email</string>
    <string name="cancelar_install">Deseja cancelar a instalação do\nTabela Campeonato ?</string>
    <string name="preencha_nome">Preencha campo Nome. (min. 3)</string>
    <string name="preencha_email">Insira um e_mail válido.</string>
    <string name="senha_forte">Digite uma senha mais forte, contendo no mínimo 8 caracteres e que contenha letras e números!</string>
    <string name="senhas_diferentes">Os campos de Senha não são iguais.</string>
    <string name="email_ja_cadastrado">email já cadastrado.</string>
    <string name="google_profile">Google Profile</string>
    <string name="avatar">Avatar</string>
    <string name="proximo">Próximo</string>
    <string name="liga_compartilhada">liga_compartilhada</string>
    <string name="digite_um_nome_para_sua_liga">Digite um nome para sua Liga</string>
    <string name="selecione_um_escudo_ou_imagem">Selecione um Escudo ou Imagem</string>
    <string name="nome_da_liga">Nome da Liga</string>
    <string name="anterior">Anterior</string>
    <string name="problemas_carregar_foto">Problemas ao carregar foto.</string>
    <string name="recuperar_senha">\"Foi enviado um e-mail de recuperação de senha para o endereço: \"</string>
    <string name="problemas_recuperação_de_senha">Probemas ba recuperação de senha. Verifique sua conexão.</string>
    <string name="cancelar_cadastro">Deseja cancelar o cadastro ?</string>
    <string name="ask">\" ?\"</string>
    <string name="digite_apelido">Digite um Apelido.</string>
    <string name="_barra6">/6</string>
    <string name="pb_ativa_6">/6 -</string>
    <string name="criando_credenciais">Criando Credenciais</string>
    <string name="criando_usuario">Criando Usuário</string>
    <string name="salvando_imagem_perfil">Salvando Imagem Perfil</string>
    <string name="criando_liga">Criando Liga</string>
    <string name="salvando_imagem_liga">Salvado Imagem Liga</string>
    <string name="criando_jogador">Criando Jogador</string>
    <string name="ja_existe_jogador_com_este_nome">Já existe um jogador com este nome.</string>
    <string name="administrador_so_pode_ser_editado_em_perfil">Administrador só pode ser editado em Perfil</string>
    <string name="voce_nao_tem_permissao_para_editar_jogadores">Você não tem permissão para editar jogadores.</string>

</resources>