<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/cllogin"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:autofillHints="@string/senha"
tools:context=".view.Login">

    <ProgressBar
        android:id="@+id/mprogressBar"
        style="@android:style/Widget.Holo.ProgressBar.Small"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:elevation="10dp"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/progress_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/campogde" />


    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/logar_com_google"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/sign_in_button"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView49" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/logar_com_email"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/cardView6"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/fundo_verde_escuro"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView43">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/branco">

            <ImageView
                android:id="@+id/eyesenhablack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="2dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/versenha"
                android:src="@drawable/ic_noeye_black"
                app:layout_constraintBottom_toBottomOf="@+id/edtsenha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edtsenha" />

            <EditText
                android:id="@+id/edtsenha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:autofillHints="@string/senha"
                android:contentDescription="@string/senha"
                android:ems="10"
                android:gravity="bottom"
                android:inputType="textPassword"
                android:labelFor="@id/edtsenha"
                app:layout_constraintEnd_toStartOf="@+id/eyesenhablack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView44" />

            <EditText
                android:id="@+id/edtemail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="@string/nome"
                android:contentDescription="@string/nome"
                android:inputType="textNoSuggestions|textWebEmailAddress"
                android:labelFor="@id/edtemail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView42" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/e_mail"
                android:textColor="@color/fundo_verde_escuro"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/edtemail"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/senha"
                android:textColor="@color/fundo_verde_escuro"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/edtsenha"
                app:layout_constraintTop_toBottomOf="@+id/edtemail" />

            <TextView
                android:id="@+id/txtesquecisenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/esqueci_a_senha"
                android:textColor="@color/fundo_verde_escuro"
                app:layout_constraintStart_toStartOf="@+id/edtsenha"
                app:layout_constraintTop_toBottomOf="@+id/edtsenha" />

            <Button
                android:id="@+id/btlogar"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/logar"
                android:textColor="@color/fundo_verde_escuro"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtsenha"
                app:rippleColor="@color/fundo_verde_escuro"
                app:strokeColor="@color/fundo_verde_escuro" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/fazer_cadastro"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/btcad"
        app:layout_constraintTop_toBottomOf="@+id/cardView6" />

    <Button
        android:id="@+id/btcad"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cadastrar_por_e_mail"
        android:textColor="@color/fundo_verde_escuro"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView50"
        app:rippleColor="@color/fundo_verde_escuro"
        app:strokeColor="@color/fundo_verde_escuro" />


</androidx.constraintlayout.widget.ConstraintLayout>